# Wine-Scraping

./: .coverage  Dockerfile  LICENSE  README.md  WS_cleaning.ipynb  WS_extract_page.ipynb  coverage.json  ipynb.ipynb  models.ipynb  models_realisation.ipynb  new_notebook.ipynb  pyproject.toml  requirements.txt  streamlit_app.py  test_models.ipynb  todo.txt  wine_scraper.ipynb  wine_scrapper_selenium.ipynb
data/: importance.csv  pred_regression.csv  result_ml.csv  result_ml_classification.csv  result_ml_regression.csv  result_ml_save.csv  result_performance.csv  vins.json  vins2.json  wine_links.csv
data/DB/: dt.db  models_db.db
data/tables/: importance.csv  pred_classification.csv  pred_regression.csv  result_ml_classification.csv
notebooks/: models_realisation.ipynb  new_notebook.ipynb
old_notebooks/: WS_cleaning.ipynb  wine_scraping_auto.ipynb  wine_scrapper_selenium.ipynb
quarto/: custom.scss  presentation.html  presentation.qmd
src/modules/: bear_cleaner.py  cleaning.py  create_tables.py  data_extractor.py  ml_trigger.py  models.py  mystical_soup.py  optimisation_script.py  prediction.py  prediction_script.py  scraper.py  scraping.py  scraping_class.py  scraping_functions.py  scraping_trigger.py  selenium_extractor.py  st_functions.py  streamlit_app.py  utils.py  vin_dataclass.py
test_pages/: vin_blanc_page_1.html  vin_rose_page_1.html  vin_rouge_page_1.html
test_pages/vin_blanc_page_1_fichiers/: anchor.html  (+29 more)
tests/: page.txt  test_app.py  test_bear_cleaner.py  test_models.py  test_mystical_soup.py  test_prediction.py  test_scraping_functions.py
(+53 files in other folders)
