[tool.poetry]
name = "wine-scraping"
version = "0.1.0"
description = "Un projet complet avec scraping, data wrangling (polars), machine learning avec sklearn, création de database, tests, et application sur streamlit."
authors = ["devgui37"]
license = "CC BY-SA 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yarl = "^1.9.3"
requests-html = "^0.10.0"
free-proxy = "^1.1.1"
pathlib = "^1.0.1"
rich = "^13.7.0"
pyserde = "^0.12.5"
polars = "^0.20.2"
beautifulsoup4 = "^4.12.2"  
scikit-learn = "^1.3.2"
numpy = "^1.26.2"
pandas = "^2.1.3"
duckdb = "^0.9.2"
streamlit = "^1.28.2"
plotly = "^5.18.0"
statsmodels = "^0.14.0"
poetry = "^1.7.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
black = "^23.11.0"
ruff = "^0.1.6"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.mypy]
disable_error_code = ["attr-defined"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
